# AsliCar

./: .gitignore  api_client.py  config.py  data_processor.py  main.py  notification_sender.py  pyproject.toml
.github/workflows/: asli_car.yml
